--- a/app/global.scss
+++ b/app/global.scss
@@ -1,5 +1,10 @@
 @import 'https://fonts.googleapis.com/css2?family=Roboto&display=swap';
 
+
+@font-face {
+  font-family: 'Sicret';
+  src: url('./public/Sicret_PERSONAL-Light.ttf');
+}
 * {
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
