--- a/app/workspace/[id]/workspace.scss
+++ b/app/workspace/[id]/workspace.scss
@@ -43,6 +43,7 @@
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       border-radius: 5px;
       width: 300px;
+      height: 142.5px;
       .upper {
         display: flex;
         flex-direction: row;
